Add image for 'Hebergement a Marseille'

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <div class="artcile1Part1">
                             <div class="cards">
                                 <div class="cardImgB3">
-                                    <img src="./images/hebergements/4_small/AubergelaCannebière.jpg" alt="Image of Auberge la Cannebière">
+                                    <img class="hebergementImg1" src="./images/hebergements/4_small/AubergelaCannebière.jpg" alt="Image of Auberge la Cannebière">
                                 </div>
                                 <div class="cardTextB3">
                                     <h4>Auberge la Cannebière</h1>
@@ -95,7 +95,7 @@
                                 </div>
                             </div>
                             <div class="cards">
-                                <div class="cardImgB3"><p>PHOTO</p></div>
+                                <div class="cardImgB3"><img class="hebergementImg2" src="./images/hebergements/4_small/Hôtel du port.jpg" alt="Image Hôtel du port"></div>
                                 <div class="cardTextB3">
                                     <h4>Hôtel du port</h1>
                                     <p>Nuit à partir de 2$</p>
@@ -109,7 +109,9 @@
                                 </div>
                             </div>
                             <div class="cards">
-                                <div class="cardImgB3"><p>PHOTO</p></div>
+                                <div class="cardImgB3">
+                                    <img class="hebergementImg3" src="./images/hebergements/4_small/Hôtel Les mouettes.jpg" alt="Image Hôtel Les mouettes"></img>
+                                </div>
                                 <div class="cardTextB3">
                                     <h4>Hôtel Les mouettes</h1>
                                     <p>Nuit à partir de 76$</p>
@@ -127,7 +129,9 @@
                         </div>
                             <div class="artcile1Part2">
                                 <div class="cards">
-                                    <div class="cardImgB3"><p>PHOTO</p></div>
+                                    <div class="cardImgB3">
+                                        <img class="hebergementImg4" src="./images/hebergements/4_small/Hôtel de la mer.jpg" alt="Image Hôtel de la mer"></img>
+                                    </div>
                                     <div class="cardTextB3">
                                         <h4>Hôtel de la mer</h1>
                                         <p>Nuit à partir de 25$</p>
@@ -143,7 +147,7 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cardImgB3"><p>PHOTO</p></div>
+                                    <div class="cardImgB3"><img class="hebergementImg5" src="./images/hebergements/4_small/Auberge Le Panier.jpg" alt="Image Auberge Le Panier"></img></div>
                                     <div class="cardTextB3">
                                         <h4>Auberge Le Panier</h1>
                                         <p>Nuit à partir de 2$</p>
@@ -159,7 +163,7 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cardImgB3"><p>PHOTO</p></div>
+                                    <div class="cardImgB3"><img class="hebergementImg6" src="./images/hebergements/4_small/Hôtel chez Amina.jpg" alt="Image Hôtel chez Amina"></img></div>
                                     <div class="cardTextB3">
                                         <h4>Hôtel chez Amina</h1>
                                         <p>Nuit à partir de 76$</p>
