Add images for 'Les plus populaires'

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                         <div class="cardsWithIcon">
-                            <p>PHOTO</p>
+                            <img class="populaireImg1" src="./images/hebergements/4_small/Hôtel Tout bleu et Blanc.jpg" alt="Image Hôtel Tout bleu et Blanc"></img>
                             <div class="cardDescripIcon">
                                 <h4>Hôtel Le soleil du matin</h1>
                                 <p>Nuit à partir de 128$</p>
@@ -199,7 +199,7 @@
                             </div>
                         </div>
                         <div class="cardsWithIcon">
-                            <p>PHOTO</p>
+                            <img class="populaireImg2" src="./images/hebergements/4_small/Au coeur de l'eau Chambre d'hôte.jpg" alt="Image Au coeur de l'eau Chambre d'hôtel"></img>
                             <div class="cardDescripIcon">
                                 <h4>Au coeur de l'eau Chambres d'hôtes</h1>
                                 <p>Nuit à partir de 71$</p>
@@ -215,7 +215,7 @@
                             </div>
                         </div>
                         <div class="cardsWithIcon">
-                            <p>PHOTO</p>
+                            <img class="populaireImg3" src="./images/hebergements/4_small/Hôtel Tout bleu et Blanc.jpg" alt="Image Hôtel Tout bleu et Blanc"></img>
                             <div class="cardDescripIcon">
                                 <h4>Hôtel Tout bleu et Blanc</h1>
                                 <p>Nuit à partir de 68$</p>
