correction: deleted some useless div

--- a/index.html
+++ b/index.html
@@ -47,24 +47,29 @@
                         <h4>Filtres:</h4>
                         <div class="filterRelou"> 
                             <div class="filter">
-                                <div class="filterIcon">
-                                    <i class="fa-solid fa-money-bill-wave"></i>
-                                </div>
+                                <i class="fa-solid fa-money-bill-wave"></i>
                                 <p>Economique</p>
                             </div>
                             <div class="filter">
-                                <div class="filterIcon"><i class="fa-solid fa-child-reaching"></i></div>
-                                
+                                <i class="fa-solid fa-child-reaching"></i>
                                 <p>Familial</p>
                             </div>
                         </div> 
                         <div class="filter">
-                            <div class="filterIcon"><i class="fa-solid fa-heart"></i></div>
+                            <i class="fa-solid fa-heart"></i>
                             <p>Romantique</p>
                         </div>
                         <div class="filter">
-                            <div class="filterIcon"><i class="fa-solid fa-dog"></i></div>
-                            <p>Animaux autorisés</p>
+                            <a href="#">
+                                <i class="fa-solid fa-dog"></i>
+                                <p>Animaux autorisés</p>
+                            </a>
+                        </div>
+                        <div class="filter">
+                            <a href="#">
+                                <i class="fa-solid fa-child-reaching"></i>
+                                <p>test</p>
+                            </a>
                         </div>
                     </div>
                     <div class="headInformation">
@@ -74,7 +79,7 @@
                 </section>
                 <article id="container3">
                     <section class="article1">
-                        <p>Hébergement à Marseille</p>
+                        <h4>Hébergement à Marseille</h4>
                         <div class="artcile1Part1">
                             <div class="cards">
                                 <div class="cardImgB3">
@@ -232,36 +237,38 @@
                         </div>
                     </aside>
                     <section class="article3">
-                        <p>Activités à Marseille</p>
+                        <h4>Activités à Marseille</h4>
                         <div class="article3cards">
                             <div class="artcile3Part1">
                                 <div class="cards">
-                                    <p>PHOTO</p>
+                                    <img class="activiteImg1" src="./images/activites/4_small/vieux Port.jpg" alt="Image vieux port"></img>
                                     <p>vieux Port</p>
                                 </div>
                                 <div class="artcile3Relou">
                                     <div class="cards">
-                                        <div class="cardImgB5"><p>PHOTO</p></div>
+                                        <div class="cardImgB5">
+                                            <img class="activiteImg2" src="./images/activites/4_small/Port de Pomègues.jpg" alt="Image Port de Pomègues"></img>
+                                        </div>
                                         <div class="cardTextB5"><p>Port de Pomègues</p></div>
                                     </div>
                                     <div class="cards">
-                                        <p>PHOTO</p>
+                                        <img class="activiteImg3" src="./images/activites/4_small/Iles du Frioul.jpg" alt="Image Iles du Frioul"></img>
                                         <p>Iles du Frioul</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="artcile3Part2">
                                 <div class="cards">
-                                    <p>photo</p>
+                                    <img class="activiteImg4" src="./images/activites/4_small/Parc National des Calanques.jpg" alt="Image Parc National des Calanques"></img>
                                     <p>Parc National des Calanques</p>
                                 </div>
                                 <div class="artcile3Relou">
                                     <div class="cards">
-                                        <p>photo</p>
+                                        <img class="activiteImg5" src="./images/activites/4_small/Notre Dame de la garde.jpg" alt="Image Notre Dame de la garde"></img>
                                         <p>Notre Dame de la garde</p>
                                     </div>
                                     <div class="cards">
-                                        <p>photo</p>
+                                        <img class="activiteImg6" src="./images/activites/4_small/Parc Longchap.jpg" alt="Image Parc Longchap"></img>
                                         <p>Parc Longchap</p>
                                     </div>
                                 </div>
