--- a/index.html
+++ b/index.html
@@ -44,20 +44,26 @@
                         </div>
                     </div>
                     <div class="filters">
-                        <h4>Filtres:</h4>
-                        <div class="filterRelou"> 
+                        <p>Filtres</p>
+                        <div class="filterRelou">
+                             <a href="#">
+                                <div class="filter">
+                                    <i class="fa-solid fa-money-bill-wave"></i>
+                                    <p>Economique</p>
+                                </div>
+                            </a>
                             <div class="filter">
-                                <i class="fa-solid fa-money-bill-wave"></i>
-                                <p>Economique</p>
-                            </div>
-                            <div class="filter">
-                                <i class="fa-solid fa-child-reaching"></i>
-                                <p>Familial</p>
+                                <a href="#">
+                                    <i class="fa-solid fa-child-reaching"></i>
+                                    <p>Familial</p>
+                                </a>
                             </div>
                         </div> 
                         <div class="filter">
-                            <i class="fa-solid fa-heart"></i>
-                            <p>Romantique</p>
+                            <a href="#">
+                                <i class="fa-solid fa-heart"></i>
+                                <p>Romantique</p>
+                            </a>
                         </div>
                         <div class="filter">
                             <a href="#">
@@ -73,20 +79,20 @@
                         </div>
                     </div>
                     <div class="headInformation">
-                        <div class="infomationIcon"><i class="fa-solid fa-info"></i></i></div>
+                        <div class="infomationIcon"><i class="fa-solid fa-info"></i></div>
                         <p>Plus de 500 logements sont disponible dans cette ville</p>
                     </div>
                 </section>
                 <article id="container3">
                     <section class="article1">
-                        <h4>Hébergement à Marseille</h4>
+                        <h2>Hébergement à Marseille</h2>
                         <div class="artcile1Part1">
                             <div class="cards">
                                 <div class="cardImgB3">
                                     <img class="hebergementImg1" src="./images/hebergements/4_small/AubergelaCannebière.jpg" alt="Image of Auberge la Cannebière">
                                 </div>
                                 <div class="cardTextB3">
-                                    <h4>Auberge la Cannebière</h1>
+                                    <h3>Auberge la Cannebière</h3>
                                     <p>Nuit à partir de 25$</p>
                                     <div class="starEvaluation">
                                         <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -186,13 +192,13 @@
                     </section>
                     <aside class="article2">
                         <div class="artcile2Title">
-                            <h4>Les plus populaires</h4>
+                            <h2>Les plus populaires</h2>
                             <i class="fa-solid fa-star"></i>
                         </div>
                         <div class="cardsWithIcon">
                             <img class="populaireImg1" src="./images/hebergements/4_small/Hôtel Tout bleu et Blanc.jpg" alt="Image Hôtel Tout bleu et Blanc"></img>
                             <div class="cardDescripIcon">
-                                <h4>Hôtel Le soleil du matin</h1>
+                                <h3>Hôtel Le soleil du matin</h3>
                                 <p>Nuit à partir de 128$</p>
                                 <div class="starEvaluation">
                                     <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -206,7 +212,7 @@
                         <div class="cardsWithIcon">
                             <img class="populaireImg2" src="./images/hebergements/4_small/Au coeur de l'eau Chambre d'hôte.jpg" alt="Image Au coeur de l'eau Chambre d'hôtel"></img>
                             <div class="cardDescripIcon">
-                                <h4>Au coeur de l'eau Chambres d'hôtes</h1>
+                                <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                                 <p>Nuit à partir de 71$</p>
                                 <div class="starEvaluation">
                                     <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -222,7 +228,7 @@
                         <div class="cardsWithIcon">
                             <img class="populaireImg3" src="./images/hebergements/4_small/Hôtel Tout bleu et Blanc.jpg" alt="Image Hôtel Tout bleu et Blanc"></img>
                             <div class="cardDescripIcon">
-                                <h4>Hôtel Tout bleu et Blanc</h1>
+                                <h3>Hôtel Tout bleu et Blanc</h3>
                                 <p>Nuit à partir de 68$</p>
                                 <div class="starEvaluation">
                                     <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -237,7 +243,7 @@
                         </div>
                     </aside>
                     <section class="article3">
-                        <h4>Activités à Marseille</h4>
+                        <h2>Activités à Marseille</h2>
                         <div class="article3cards">
                             <div class="artcile3Part1">
                                 <div class="cards">
@@ -280,9 +286,11 @@
             <footer class="basDePage">
                 <div class="footInfo">
                     <h4>A propos</h4>
-                    <p>Fonctionnement du site</p>
-                    <p>Conditions générales de vente</p>
-                    <p>Données et confidentialité</p>
+                    <ul>
+                        <li><a href="#">Fonctionnement du site</a></li>
+                        <li><a href="#">Conditions générales de vente</a></li>
+                        <li><a href="#">Données et confidentialité</a></li>
+                    </ul>
                 </div>
                 <div class="footInfo">
                     <h4>Nos hébergements</h4>
