Correction: filters display and index.html errors

--- a/css/index.html
+++ b/css/index.html
@@ -102,10 +102,10 @@
                             </div>
                             <div class="cards">
                                 <div class="cardImgB3">
-                                    <img src="./images/hebergements/4_small/Hôtelduport.jpg" alt="Image Hôtel du port">
+                                    <img src="./images/hebergements/4_small/Hôtel du port.jpg" alt="Image Hôtel du port">
                                 </div>
                                 <div class="cardTextB3">
-                                    <h4>Hôtel du port</h4>
+                                    <h4>Hôtel du port</h1>
                                     <p>Nuit à partir de 2$</p>
                                     <div class="starEvaluation">
                                         <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -118,10 +118,10 @@
                             </div>
                             <div class="cards">
                                 <div class="cardImgB3">
-                                    <img src="./images/hebergements/4_small/HôtelLesmouettes.jpg" alt="Image Hôtel Les mouettes"/>
+                                    <img class="hebergementImg3" src="./images/hebergements/4_small/Hôtel Les mouettes.jpg" alt="Image Hôtel Les mouettes"></img>
                                 </div>
                                 <div class="cardTextB3">
-                                    <h4>Hôtel Les mouettes</h4>
+                                    <h4>Hôtel Les mouettes</h1>
                                     <p>Nuit à partir de 76$</p>
                                     <div class="starEvaluation">
                                         <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -138,10 +138,10 @@
                             <div class="artcile1Part2">
                                 <div class="cards">
                                     <div class="cardImgB3">
-                                        <img src="./images/hebergements/4_small/Hôteldelamer.jpg" alt="Image Hôtel de la mer"/>
+                                        <img class="hebergementImg4" src="./images/hebergements/4_small/Hôtel de la mer.jpg" alt="Image Hôtel de la mer"></img>
                                     </div>
                                     <div class="cardTextB3">
-                                        <h4>Hôtel de la mer</h4>
+                                        <h4>Hôtel de la mer</h1>
                                         <p>Nuit à partir de 25$</p>
                                         <div class="starEvaluation">
                                             <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -155,9 +155,9 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cardImgB3"><img src="./images/hebergements/4_small/AubergeLePanier.jpg" alt="Image Auberge Le Panier"/></div>
+                                    <div class="cardImgB3"><img class="hebergementImg5" src="./images/hebergements/4_small/Auberge Le Panier.jpg" alt="Image Auberge Le Panier"></img></div>
                                     <div class="cardTextB3">
-                                        <h4>Auberge Le Panier</h4>
+                                        <h4>Auberge Le Panier</h1>
                                         <p>Nuit à partir de 2$</p>
                                         <div class="starEvaluation">
                                             <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -171,9 +171,9 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cardImgB3"><img src="./images/hebergements/4_small/HôtelchezAmina.jpg" alt="Image Hôtel chez Amina"/></div>
+                                    <div class="cardImgB3"><img class="hebergementImg6" src="./images/hebergements/4_small/Hôtel chez Amina.jpg" alt="Image Hôtel chez Amina"></img></div>
                                     <div class="cardTextB3">
-                                        <h4>Hôtel chez Amina</h4>
+                                        <h4>Hôtel chez Amina</h1>
                                         <p>Nuit à partir de 76$</p>
                                         <div class="starEvaluation">
                                             <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -193,7 +193,7 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                         <div class="cardsWithIcon">
-                            <img class="populaireImg1" src="./images/hebergements/4_small/HôtelToutbleuetBlanc.jpg" alt="Image Hôtel Tout bleu et Blanc"/>
+                            <img class="populaireImg1" src="./images/hebergements/4_small/Hôtel Tout bleu et Blanc.jpg" alt="Image Hôtel Tout bleu et Blanc"></img>
                             <div class="cardDescripIcon">
                                 <h3>Hôtel Le soleil du matin</h3>
                                 <p>Nuit à partir de 128$</p>
@@ -207,7 +207,7 @@
                             </div>
                         </div>
                         <div class="cardsWithIcon">
-                            <img class="populaireImg2" src="./images/hebergements/4_small/Aucoeurdel'eauChambred'hôte.jpg" alt="Image Au coeur de l'eau Chambre d'hôtel"/>
+                            <img class="populaireImg2" src="./images/hebergements/4_small/Au coeur de l'eau Chambre d'hôte.jpg" alt="Image Au coeur de l'eau Chambre d'hôtel"></img>
                             <div class="cardDescripIcon">
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                                 <p>Nuit à partir de 71$</p>
@@ -223,7 +223,7 @@
                             </div>
                         </div>
                         <div class="cardsWithIcon">
-                            <img class="populaireImg3" src="./images/hebergements/4_small/HôtelToutbleuetBlanc.jpg" alt="Image Hôtel Tout bleu et Blanc"/>
+                            <img class="populaireImg3" src="./images/hebergements/4_small/Hôtel Tout bleu et Blanc.jpg" alt="Image Hôtel Tout bleu et Blanc"></img>
                             <div class="cardDescripIcon">
                                 <h3>Hôtel Tout bleu et Blanc</h3>
                                 <p>Nuit à partir de 68$</p>
@@ -244,34 +244,34 @@
                         <div class="article3cards">
                             <div class="artcile3Part1">
                                 <div class="cards">
-                                    <img class="activiteImg1" src="./images/activites/4_small/vieuxPort.jpg" alt="Image vieux port"/>
+                                    <img class="activiteImg1" src="./images/activites/4_small/vieux Port.jpg" alt="Image vieux port"></img>
                                     <p>vieux Port</p>
                                 </div>
                                 <div class="artcile3Relou">
                                     <div class="cards">
                                         <div class="cardImgB5">
-                                            <img class="activiteImg2" src="./images/activites/4_small/PortdePomègues.jpg" alt="Image Port de Pomègues"/>
+                                            <img class="activiteImg2" src="./images/activites/4_small/Port de Pomègues.jpg" alt="Image Port de Pomègues"></img>
                                         </div>
                                         <div class="cardTextB5"><p>Port de Pomègues</p></div>
                                     </div>
                                     <div class="cards">
-                                        <img class="activiteImg3" src="./images/activites/4_small/IlesduFrioul.jpg" alt="Image Iles du Frioul"/>
+                                        <img class="activiteImg3" src="./images/activites/4_small/Iles du Frioul.jpg" alt="Image Iles du Frioul"></img>
                                         <p>Iles du Frioul</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="artcile3Part2">
                                 <div class="cards">
-                                    <img class="activiteImg4" src="./images/activites/4_small/ParcNationaldesCalanques.jpg" alt="Image Parc National des Calanques"/>
+                                    <img class="activiteImg4" src="./images/activites/4_small/Parc National des Calanques.jpg" alt="Image Parc National des Calanques"></img>
                                     <p>Parc National des Calanques</p>
                                 </div>
                                 <div class="artcile3Relou">
                                     <div class="cards">
-                                        <img class="activiteImg5" src="./images/activites/4_small/NotreDamedelagarde.jpg" alt="Image Notre Dame de la garde"/>
+                                        <img class="activiteImg5" src="./images/activites/4_small/Notre Dame de la garde.jpg" alt="Image Notre Dame de la garde"></img>
                                         <p>Notre Dame de la garde</p>
                                     </div>
                                     <div class="cards">
-                                        <img class="activiteImg6" src="./images/activites/4_small/ParcLongchap.jpg" alt="Image Parc Longchap"/>
+                                        <img class="activiteImg6" src="./images/activites/4_small/Parc Longchap.jpg" alt="Image Parc Longchap"></img>
                                         <p>Parc Longchap</p>
                                     </div>
                                 </div>
