Correction: Ajustement of first article and aside display and correction the iamges name

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     <img src="./images/hebergements/4_small/Hôtelduport.jpg" alt="Image Hôtel du port">
                                 </div>
                                 <div class="cardTextB3">
-                                    <h4>Hôtel du port</h4>
+                                    <h4>Hôtel du port</h1>
                                     <p>Nuit à partir de 2$</p>
                                     <div class="starEvaluation">
                                         <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -118,10 +118,10 @@
                             </div>
                             <div class="cards">
                                 <div class="cardImgB3">
-                                    <img src="./images/hebergements/4_small/HôtelLesmouettes.jpg" alt="Image Hôtel Les mouettes"/>
+                                    <img src="./images/hebergements/4_small/HôtelLesmouettes.jpg" alt="Image Hôtel Les mouettes">
                                 </div>
                                 <div class="cardTextB3">
-                                    <h4>Hôtel Les mouettes</h4>
+                                    <h4>Hôtel Les mouettes</h1>
                                     <p>Nuit à partir de 76$</p>
                                     <div class="starEvaluation">
                                         <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -138,10 +138,10 @@
                             <div class="artcile1Part2">
                                 <div class="cards">
                                     <div class="cardImgB3">
-                                        <img src="./images/hebergements/4_small/Hôteldelamer.jpg" alt="Image Hôtel de la mer"/>
+                                        <img src="./images/hebergements/4_small/Hôteldelamer.jpg" alt="Image Hôtel de la mer">
                                     </div>
                                     <div class="cardTextB3">
-                                        <h4>Hôtel de la mer</h4>
+                                        <h4>Hôtel de la mer</h1>
                                         <p>Nuit à partir de 25$</p>
                                         <div class="starEvaluation">
                                             <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -155,9 +155,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cardImgB3"><img src="./images/hebergements/4_small/AubergeLePanier.jpg" alt="Image Auberge Le Panier"/></div>
+                                    <div class="cardImgB3">
+                                        <img src="./images/hebergements/4_small/AubergeLePanier.jpg" alt="Image Auberge Le Panier">
+                                    </div>
                                     <div class="cardTextB3">
-                                        <h4>Auberge Le Panier</h4>
+                                        <h4>Auberge Le Panier</h1>
                                         <p>Nuit à partir de 2$</p>
                                         <div class="starEvaluation">
                                             <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -171,9 +173,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cardImgB3"><img src="./images/hebergements/4_small/HôtelchezAmina.jpg" alt="Image Hôtel chez Amina"/></div>
+                                    <div class="cardImgB3">
+                                        <img class="hebergementImg6" src="./images/hebergements/4_small/HôtelchezAmina.jpg" alt="Image Hôtel chez Amina">
+                                    </div>
                                     <div class="cardTextB3">
-                                        <h4>Hôtel chez Amina</h4>
+                                        <h4>Hôtel chez Amina</h1>
                                         <p>Nuit à partir de 76$</p>
                                         <div class="starEvaluation">
                                             <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
@@ -193,8 +197,8 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                         <div class="cardsWithIcon">
-                            <img class="populaireImg1" src="./images/hebergements/4_small/HôtelToutbleuetBlanc.jpg" alt="Image Hôtel Tout bleu et Blanc"/>
-                            <div class="cardDescripIcon">
+                                <img src="./images/hebergements/4_small/HôtelLesoleildumatin.jpg" alt="Image Hôtel Tout bleu et Blanc">
+                                <div class="cardDescripIcon">
                                 <h3>Hôtel Le soleil du matin</h3>
                                 <p>Nuit à partir de 128$</p>
                                 <div class="starEvaluation">
@@ -207,7 +211,7 @@
                             </div>
                         </div>
                         <div class="cardsWithIcon">
-                            <img class="populaireImg2" src="./images/hebergements/4_small/Aucoeurdel'eauChambred'hôte.jpg" alt="Image Au coeur de l'eau Chambre d'hôtel"/>
+                            <img src="./images/hebergements/4_small/Aucoeurdel'eauChambred'hôte.jpg" alt="Image Au coeur de l'eau Chambre d'hôtel">
                             <div class="cardDescripIcon">
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                                 <p>Nuit à partir de 71$</p>
@@ -223,7 +227,7 @@
                             </div>
                         </div>
                         <div class="cardsWithIcon">
-                            <img class="populaireImg3" src="./images/hebergements/4_small/HôtelToutbleuetBlanc.jpg" alt="Image Hôtel Tout bleu et Blanc"/>
+                            <img src="./images/hebergements/4_small/HôtelToutbleuetBlanc.jpg" alt="Image Hôtel Tout bleu et Blanc">
                             <div class="cardDescripIcon">
                                 <h3>Hôtel Tout bleu et Blanc</h3>
                                 <p>Nuit à partir de 68$</p>
@@ -243,35 +247,35 @@
                         <h2>Activités à Marseille</h2>
                         <div class="article3cards">
                             <div class="artcile3Part1">
-                                <div class="cards">
-                                    <img class="activiteImg1" src="./images/activites/4_small/vieuxPort.jpg" alt="Image vieux port"/>
+                                <div class="cards3">
+                                    <img class="activiteImg1" src="./images/activites/4_small/vieuxPort.jpg" alt="Image vieux port">
                                     <p>vieux Port</p>
                                 </div>
                                 <div class="artcile3Relou">
-                                    <div class="cards">
+                                    <div class="cards3">
                                         <div class="cardImgB5">
-                                            <img class="activiteImg2" src="./images/activites/4_small/PortdePomègues.jpg" alt="Image Port de Pomègues"/>
+                                            <img class="activiteImg2" src="./images/activites/4_small/PortdePomègues.jpg" alt="Image Port de Pomègues">
                                         </div>
                                         <div class="cardTextB5"><p>Port de Pomègues</p></div>
                                     </div>
-                                    <div class="cards">
-                                        <img class="activiteImg3" src="./images/activites/4_small/IlesduFrioul.jpg" alt="Image Iles du Frioul"/>
+                                    <div class="cards3">
+                                        <img class="activiteImg3" src="./images/activites/4_small/IlesduFrioul.jpg" alt="Image Iles du Frioul">
                                         <p>Iles du Frioul</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="artcile3Part2">
-                                <div class="cards">
-                                    <img class="activiteImg4" src="./images/activites/4_small/ParcNationaldesCalanques.jpg" alt="Image Parc National des Calanques"/>
+                                <div class="cards3">
+                                    <img class="activiteImg4" src="./images/activites/4_small/ParcNationaldesCalanques.jpg" alt="Image Parc National des Calanques">
                                     <p>Parc National des Calanques</p>
                                 </div>
                                 <div class="artcile3Relou">
-                                    <div class="cards">
-                                        <img class="activiteImg5" src="./images/activites/4_small/NotreDamedelagarde.jpg" alt="Image Notre Dame de la garde"/>
+                                    <div class="cards3">
+                                        <img class="activiteImg5" src="./images/activites/4_small/NotreDamedelagarde.jpg" alt="Image Notre Dame de la garde">
                                         <p>Notre Dame de la garde</p>
                                     </div>
-                                    <div class="cards">
-                                        <img class="activiteImg6" src="./images/activites/4_small/ParcLongchap.jpg" alt="Image Parc Longchap"/>
+                                    <div class="cards3">
+                                        <img class="activiteImg6" src="./images/activites/4_small/ParcLongchap.jpg" alt="Image Parc Longchap">
                                         <p>Parc Longchap</p>
                                     </div>
                                 </div>
